--- a/src/Components/about/about.css
+++ b/src/Components/about/about.css
@@ -5,33 +5,48 @@
     grid-template-columns: repeat(2, 1fr);
     align-items: center;
     column-gap: 3rem;
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .about_img {
-    width: 340px;
+    width: 400px;
     border-radius: 1.5rem;
-    justify-self: center;
-}
+    justify-self: center; 
+    margin-top: 30px;
+    animation: floatAnimation 3s infinite;
+    position: relative; 
+    z-index: 100;  
 
+} 
+@keyframes floatAnimation {
+    0% {
+        transform: translateY(-10px);
+    }
+    50% {
+        transform: translateY(10px); 
+    }
+    100% {
+        transform: translateY(-10px);
+    }
+}
+ 
 .about_info {
-    grid-template-columns: repeat(3, 140px);
+    grid-template-columns: repeat(3, 150px);
     gap: 0.9rem;
     margin-bottom: var(--mb-2);
 }
 
-
 .about_box {
     background-image: linear-gradient(150deg, #9ea6cf, #c2d4e6, #a1b0d1, #8593a5fa);
     border: 3px solid #707b86;
-    border-radius: 1.25rem;
+    border-radius: 1.5rem;
     text-align: center;
     padding: 1.10rem 1.35rem;
-    color: #725d5d;
+    color: #301746;
 }
 
 .about_icon {
-    font-size: 1.8rem;
-    color: var(--title-color);
+    font-size: 2rem; 
     margin-bottom: var(--mb-color);
 }
 
@@ -43,7 +58,7 @@
 
 .about_subtitle {
     font-size: var(--tiny-font-size);
-    color:rgb(15, 41, 46);
+    color:rgb(2, 2, 2);
 }
 
 .about_description {
@@ -51,22 +66,22 @@
     margin-bottom: var(--mb-2-5);
     color: rgb(240, 241, 164);
     font-size: large;
-    margin-left: -120px;
+    margin-left: -100px;
 }
 a{
     margin-left: -135px;
 }
 .aboutBtn{
-    color: #e7e7b2; 
-    background-color: #e0dea63a; /* Green */
+    color: #c6b6fd; 
+    background-color:#b8a4f94d; 
     border: none;
     border-radius: 10%;
     padding: 6px 7px;
     text-align: center;
     text-decoration: none;
     display: flexbox;
-    margin-left: -130px;
-    box-shadow: 0 0 50px rgba(222, 222, 189, 0.687)
+    margin-left: -100px;
+    box-shadow: 0 0 50px rgba(180, 159, 252, 0.858)
 }
 /* For large devices */
 @media screen and (max-width: 992px) {
@@ -94,7 +109,7 @@ a{
     .about_description {
         padding: 0.5rem;
         margin-bottom: 2rem;
-        margin-left: 20px;
+        margin-left: 0px;
     }
     a{
         margin-left: 0px;
@@ -107,7 +122,7 @@ a{
         text-align: center;
         text-decoration: none;
         display: flexbox;
-        margin-left: 4px;
+        margin-left: 0px;
         box-shadow: 0 0 50px rgba(222, 222, 189, 0.687)
     }
 }
@@ -121,7 +136,7 @@ a{
         margin-bottom: var(--mb-2-5);
         color: rgb(240, 241, 164);
         font-size: large;
-        margin-left: 20px;
+        margin-left: 0px;
     }a{
         margin-left: 0px;
     }
@@ -134,7 +149,7 @@ a{
         text-align: center;
         text-decoration: none;
         display: flexbox;
-        margin-left: 4px;
+        margin-left: 0px;
         box-shadow: 0 0 50px rgba(222, 222, 189, 0.687)
     }
 }
