--- a/src/Components/start/start.css
+++ b/src/Components/start/start.css
@@ -31,7 +31,9 @@
 .home_title {
     font-size: 50px;;
     margin-bottom: var(--mb-0-25);
-    text-shadow: 1px 1px 6px rgb(209, 219, 230);
+    text-shadow: 1px 1px 6px rgb(209, 219, 230); 
+    border-radius: 40%;
+    animation: profile_animate 2s ease-in-out infinite 0.9s;
 }
 
 .home_emote {
@@ -62,21 +64,47 @@
 }
 
 .home_img {
-    background: url(../../assets//Img/MyProfile.jpg);
+    background: url(../../assets/ImgProfile/MyPhoto.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    box-shadow: inset 0 0 0 9px rgba(101, 191, 233, 0.3);
+    box-shadow: inset 0 0 0 9px rgba(23, 10, 70, 0.3);
     order: 1;
     justify-self: center;
-    width: 310px;
-    height: 310px;
+    width: 280px;
+    height: 280px;
     margin-bottom: 70px;
     border-radius: 30%;
-    animation: profile_animate 12s ease-in-out infinite 0.9s;
-}
+    animation: profile_animate 2s ease-in-out infinite 0.9s;
+    position: relative; 
+    z-index: 100;  
+} 
+@keyframes profile_animate {
+    0% {
+        border-radius: 100%;
+    }
+    10% {
+        border-radius: 45%;
+    }
+    15% {
+        border-radius: 100%;
+    }
+    45% {
+        border-radius: 45%;
+    }
+    60% {
+        border-radius: 100%;
+    }
+    65% {
+        border-radius: 45%;
+    } 
+    100% {
+        border-radius: 100%;
+    }
+} 
+
 .sendBtn{
-    color: #a88dea; 
+    color: #baa5ee; 
     background-color: #aa93e23a; /* Green */
     border: none;
     border-radius: 10%;
@@ -87,21 +115,6 @@
     margin-left: 50px;
     box-shadow: 0 0 50px rgba(163, 127, 162, 0.687)
 }
-
-@keyframes profile_animate {
-    0% {
-        border-radius: 45%;
-    }
-
-    50% {
-        border-radius: 20% 20% 30% 30%/30% 30% 20% 20%;
-    }
-
-    100% {
-        border-radius: 45%;
-    }
-}
-
 .home_scroll {
     margin-left: 9.25rem;
 }
