--- a/src/Components/skills/skills.css
+++ b/src/Components/skills/skills.css
@@ -9,7 +9,7 @@
     border: 1px solid #161515;
     padding: 2rem 4rem;
     border-radius: 1.25rem;
-    background-image: linear-gradient(190deg, #d5ecea, #acc2d8, #a7b0c4, #d8b97efa);
+    background-image: linear-gradient(190deg, #d5ecea, #acc2d8, #a7b0c4, rgba(232, 212, 179, 0.98));
     color: #1d3549;
 }
 .skills_title{
@@ -35,7 +35,7 @@
     display: flex;
     column-gap: 1rem;
     font-size: 19px;
-    color: #606025;
+    color: rgb(97, 85, 26);
     
     text-align: left;
 }
