--- a/src/Components/start/start.css
+++ b/src/Components/start/start.css
@@ -147,6 +147,7 @@
     }
 
     .home_subtitle {
+        position: relative;
         padding-left: 1rem;
         margin-bottom: var(--mb-1);
         margin-left: 0px;
@@ -196,20 +197,21 @@
         box-shadow: inset 0 0 0 6px rgba(101, 191, 233, 0.3);
         width: 200px;
         height: 200px;
-        margin-left: 85px;
-        margin-top: 90px;
+        margin-left: 20px;
+        margin-top: 90px; 
     }
     .home_social {
         display:flex;
         row-gap: 1rem;
         height: 100px;
-        margin-left: 263%;
+        margin-left: 160%;
         margin-bottom: 280%;
+        position: relative;
     }
     .home_subtitle {
-        margin-bottom: var(--mb-1);
-        margin-left: 0px;
-        margin-left: 18%;
+        margin-bottom: var(--mb-1); 
+        margin-left: 10%;
+        position: relative;
     }
     .sendBtn{
         color: #a88dea;
@@ -221,7 +223,7 @@
         text-align: center;
         text-decoration: none;
         display: flexbox;
-        margin-left: 60px;
+        margin-left: 40px;
         font-size: smaller
     }
 }
@@ -274,29 +276,6 @@
 }
 
 /* For small devices */
-@media screen and (max-width: 390px) {
-
-    .home_img {
-        width: 180px;
-        height: 180px;
-        margin-left: -80px;
-    }
-
-    .home_emote {
-        width: 22px;
-        height: 22px;
-    }
-    .home_social {
-        display:flex;;
-        row-gap: 1rem;
-        height: 100px;
-        margin-left: 75%;
-    }
-    .sendBtn{ 
-        margin-left: 36px; 
-    }
-}
-/* For small devices */
 @media screen and (max-width: 350px) {
 
     .home_img {
@@ -314,5 +293,8 @@
         row-gap: 1rem;
         height: 100px;
         margin-left: 116%;
+    } 
+    .sendBtn{ 
+        margin-left: 0px; 
     }
 }
