--- a/src/Components/start/start.css
+++ b/src/Components/start/start.css
@@ -178,7 +178,7 @@
 }
 
 /* For medium devices */
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 576px) and (max-width: 768px) {
     .home_content {
         grid-template-columns: 0.5fr 3fr;
         padding-top: 3.5rem;
@@ -227,38 +227,36 @@
         font-size: smaller
     }
 }
-@media screen and (max-width: 576px) {
+@media screen and (min-width: 445px) and (max-width: 576px) {
     .home_content {
         grid-template-columns: 0.5fr 3fr;
         padding-top: 3.5rem;
-    }
-
-    .home_img {
-        order: initial;
-        justify-self: initial;
-    }
+    } 
 
     .home_data {
         grid-column: 1/3;
     }
 
-    .home_img {
+    .home_img { 
+        order: initial;
+        justify-self: initial;
         box-shadow: inset 0 0 0 6px rgba(101, 191, 233, 0.3);
         width: 200px;
         height: 200px;
-        margin-left: -60px;
+        margin-left: -27px;
         margin-top: 90px;
     }
     .home_social {
         display:flex;
         row-gap: 1rem;
         height: 100px;
-        margin-left: 97%;
+        margin-left: 122%;
         margin-bottom: 270%;
     }
     .home_subtitle {
         margin-bottom: var(--mb-1);
         margin-left: 0px;
+        margin-left: 3%;
     }
     .sendBtn{
         color: #a88dea;
@@ -270,13 +268,13 @@
         text-align: center;
         text-decoration: none;
         display: flexbox;
-        margin-left: 60px;
+        margin-left: 35px;
         font-size: smaller
     }
 }
 
 /* For small devices */
-@media screen and (max-width: 350px) {
+@media screen and (min-width: 250px) and (max-width: 444px){
 
     .home_img {
         width: 180px;
