--- a/src/Components/start/start.css
+++ b/src/Components/start/start.css
@@ -272,27 +272,36 @@
         font-size: smaller
     }
 }
+@media screen and (min-width: 250px) and (max-width: 444px) {
+    .home_content {
+        grid-template-columns: 0.5fr 3fr;
+        padding-top: 3.5rem;
+    }
 
-/* For small devices */
-@media screen and (min-width: 250px) and (max-width: 444px){
+    .home_data {
+        grid-column: 1/3;
+    }
 
     .home_img {
-        width: 180px;
-        height: 180px;
-        margin-left: -11%;
+        width: 120px;
+        height: 120px;
+        margin-left: -8%;
     }
 
     .home_emote {
-        width: 22px;
-        height: 22px;
+        width: 15px;
+        height: 15px;
     }
+
     .home_social {
-        display:flex;;
-        row-gap: 1rem;
-        height: 100px;
-        margin-left: 116%;
-    } 
-    .sendBtn{ 
-        margin-left: 0px; 
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        height: auto;
+        margin-left: 0;
+    }
+
+    .sendBtn {
+        margin-left: 0;
     }
 }
