--- a/src/Components/contact/contact.css
+++ b/src/Components/contact/contact.css
@@ -28,7 +28,7 @@
 }
 
 .contant-card {
-    background-image: linear-gradient(190deg, #e8e6fe, #ccd5ff, #d2e1ee, #efd4c9, #f1d895dd);
+    background-image: linear-gradient(190deg, #b7b2fb, #a1b1f8, #ccc8f9, #fbcdcd, #f0b6a2dd);
     border: 1px solid rgba(0, 0, 0, 0.1);
     padding: 1rem;
     border-radius: 0.75rem;
