--- a/src/Components/start/start.css
+++ b/src/Components/start/start.css
@@ -273,35 +273,46 @@
     }
 }
 @media screen and (min-width: 250px) and (max-width: 444px) {
+    
+    .home_container {
+        row-gap: 7rem;
+    }
+    
     .home_content {
         grid-template-columns: 0.5fr 3fr;
-        padding-top: 3.5rem;
+        padding-top: 3rem;
+        column-gap: 0rem;
+        align-items: center;
     }
-
+    
     .home_data {
         grid-column: 1/3;
     }
 
     .home_img {
-        width: 120px;
-        height: 120px;
-        margin-left: -8%;
+        order: initial;
+        justify-self: initial;
+        box-shadow: inset 0 0 0 6px rgba(101, 191, 233, 0.3);
+        width: 200px;
+        height: 200px;
+        margin-left: -70px;
+        margin-top: 90px; 
     }
 
     .home_emote {
-        width: 15px;
-        height: 15px;
+        width: 25px;
+        height: 25px;
     }
 
     .home_social {
-        display: flex;
-        flex-direction: column;
-        gap: 1rem;
-        height: auto;
-        margin-left: 0;
+        display:flex;
+        row-gap: 1rem;
+        height: 100px;
+        margin-left: 70%;
+        margin-bottom: 220%;
     }
 
     .sendBtn {
-        margin-left: 0;
+        margin-left: 1;
     }
 }
