--- a/src/Components/start/start.css
+++ b/src/Components/start/start.css
@@ -219,6 +219,7 @@
         box-shadow: inset 0 0 0 6px rgba(101, 191, 233, 0.3);
         width: 200px;
         height: 200px;
+        
         margin-left: -27px;
         margin-top: 90px;
     }
@@ -271,6 +272,7 @@
         box-shadow: inset 0 0 0 6px rgba(101, 191, 233, 0.3);
         width: 200px;
         height: 200px;
+        margin: 0 auto;
         margin-left: -70px;
         margin-top: 90px; 
     }
