--- a/src/Components/start/start.css
+++ b/src/Components/start/start.css
@@ -64,7 +64,7 @@
 }
 
 .home_img {
-    background: url(../../assets/ImgProfile/ManWhithACapAllColor.png);
+    background: url(../../assets/ImgProfile/foto.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -78,6 +78,16 @@
     position: relative; 
     z-index: 100;  
 }  
+.home_img::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(59, 31, 62, 0.2); /* Ajusta la opacidad para controlar la oscuridad */
+    border-radius: inherit;
+}
 
 .sendBtn{
     color: #baa5ee; 
