--- a/src/Components/start/start.css
+++ b/src/Components/start/start.css
@@ -63,6 +63,18 @@
     margin-bottom: var(--mb-3);
 }
 
+@keyframes scaleAnimation {
+    0% {
+        transform: scale(1);
+    }
+    50% {
+        transform: scale(0.9);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
+
 .home_img {
     background: url(../../assets/ImgProfile/foto.jpg);
     background-repeat: no-repeat;
@@ -76,8 +88,10 @@
     margin-bottom: 70px; 
     border-radius: 45% 45% 45% 45%;
     position: relative; 
-    z-index: 100;  
-}  
+    z-index: 100;
+    animation: scaleAnimation 3s infinite; /* Agregamos la animación */
+}
+
 .home_img::before {
     content: "";
     position: absolute;
@@ -98,7 +112,7 @@
     text-align: center;
     text-decoration: none;
     display: flexbox;
-    margin-left: 50px;
+    margin: auto;
     box-shadow: 0 0 50px rgba(163, 127, 162, 0.687)
 }
 .home_scroll {
@@ -190,7 +204,7 @@
         display:flex;
         row-gap: 1rem;
         height: 100px;
-        margin-left: 160%;
+        margin-left: 180%;
         margin-bottom: 280%;
         position: relative;
     }
@@ -228,16 +242,15 @@
         justify-self: initial;
         box-shadow: inset 0 0 0 6px rgba(101, 191, 233, 0.3);
         width: 200px;
-        height: 200px;
-        
-        margin-left: -27px;
+        height: 200px; 
+        margin-left: -30px;
         margin-top: 90px;
     }
     .home_social {
         display:flex;
         row-gap: 1rem;
         height: 100px;
-        margin-left: 122%;
+        margin-left: 135%;
         margin-bottom: 270%;
     }
     .home_subtitle {
