--- a/src/App.css
+++ b/src/App.css
@@ -49,7 +49,7 @@
 html {
   scroll-behavior: smooth;
   background-size: cover;
-  background-image: linear-gradient(190deg, #000613, #051735, #243075,#2b4991, #7357a9, #be6735);
+  background-image: linear-gradient(190deg, #000207, #041c47, #243075,#2b4991, rgb(79, 69, 184), #83a2e7);
 }
 
 body,
