--- a/src/Components/skills/skills.css
+++ b/src/Components/skills/skills.css
@@ -12,6 +12,15 @@
     background-image: linear-gradient(190deg, #d5ecea, #acc2d8, #a7b0c4, rgba(232, 212, 179, 0.98));
     color: #1d3549;
 }
+.skills_content_tech {
+    background-color: var(--container-color);
+    border: 1px solid #161515;
+    padding: 2rem 6rem;
+    border-radius: 1.25rem;
+    background-image: linear-gradient(190deg, #d5ecea, #acc2d8, #a7b0c4, rgba(232, 212, 179, 0.98));
+    color: #1d3549; 
+}
+
 .skills_title{
     font-size: large;
     font-weight: var(--font-medium);
