--- a/src/Components/work/work.css
+++ b/src/Components/work/work.css
@@ -12,7 +12,7 @@
     text-align: center;
     border-radius: 10px;
     border: 1px solid rgba(0,0,0,0.2);
-    background-image: linear-gradient(190deg, #bebfe6, #adc2d8, #a7b0c4, #ba9fa9fa, #db9d6bfa);
+    background-image: linear-gradient(190deg, #bebfe6, #788da2, #76819a, #808087fa, #b5c8d8fa);
     box-shadow: 0 6px 8px rgba(214, 195, 159, 0.616);
     transition: 0.3s ease-in;
   }
