--- a/src/App.css
+++ b/src/App.css
@@ -49,7 +49,8 @@
 html {
   scroll-behavior: smooth;
   background-size: cover;
-  background-image: linear-gradient(190deg, #000207, #041c47, #243075,#2b4991, rgb(79, 69, 184), #83a2e7);
+  
+  background-image: linear-gradient(190deg, #000000, #0a1a36, #374b77,#374b7a, rgb(40, 57, 93), #83a2e7);
 }
 
 body,
