--- a/src/Components/work/work.css
+++ b/src/Components/work/work.css
@@ -1,3 +1,50 @@
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1;
+}
+
+.modal_content {
+  background-image: linear-gradient(90deg, #4f73b3, #6d6b97, #4d568f);
+  padding: 40px;
+  width: 550px;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
+}
+
+.modal_content p {
+  margin-bottom: 10px;
+}
+
+.modal_content button {
+  background-color: #007bff;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.modal_content button:hover {
+  background-color: #adbdcf;
+}
+
+.modal_content p {
+  font-size: 20px;
+  margin-bottom: 20px;
+}
+
+.modal_content button {
+  font-size: 16px;
+}
+
 .work_container {
     display: flex;
     flex-wrap: wrap;
@@ -32,6 +79,7 @@
   .work_img_pic{
     margin: auto;
   }
+  
   .card-body {
     padding: 20px;
     text-align: center;
