--- a/src/Components/start/start.css
+++ b/src/Components/start/start.css
@@ -10,18 +10,19 @@ p{
 
 .home_content {
     grid-template-columns: 100px repeat(2, 1fr);
-    padding-top: 7.5rem;
-    column-gap: 0rem;
+    padding-top: 8.5rem;
+    column-gap: 2rem;
     align-items: center;
 }
 
 .home_social {
     display:flex;
-    column-gap: 0.7rem;
+    column-gap: 1rem;
     height: 100px;
+    position: relative;
     margin-left: 328%;
-    margin-bottom: 360%;
-}
+    margin-bottom: 400%;
+} 
 
 .home_social-icon {
 
@@ -48,23 +49,24 @@ p{
     margin-left: 0px;
 }
 
-.home_subtitle {
+.home_subtitle { 
     position: relative;
     font-size: var(--h3-font-size);
-    padding-left: 10rem;
+    padding-left: 7.5rem;
     font-weight: var(--font-normal);
     margin-bottom: var(--mb-1);
 }
 
 .home_subtitle::before {
-    content: '';
-    position: absolute;
+    content: ''; 
+    position: relative;
     width: 70px;
     height: 1px;
     background-color: var(--text-color);
 }
 
 .home_subtitle {
+    position: relative;
     max-width: 400px;
     margin-bottom: var(--mb-3);
 }
