--- a/src/Components/header/header.css
+++ b/src/Components/header/header.css
@@ -10,13 +10,13 @@
 } 
 @keyframes moveNavItems {
     0% {
-        transform: translateX(0); /* Posición inicial */
+        transform: translateX(3px); /* Posición inicial */
     }
     50% {
-        transform: translateX(20px); /* Mueve 20px hacia la derecha a la mitad de la animación */
+        transform: translateX(13px); /* Mueve 20px hacia la derecha a la mitad de la animación */
     }
     100% {
-        transform: translateX(0); /* Regresa a la posición inicial */
+        transform: translateX(3px); /* Regresa a la posición inicial */
     }
 }
 
