--- a/src/Components/work/work.css
+++ b/src/Components/work/work.css
@@ -1,177 +1,104 @@
-.modal {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 1;
-}
-
-.modal_content {
-  background-image: linear-gradient(90deg, #4f73b3, #6d6b97, #4d568f);
-  padding: 40px;
-  width: 550px;
-  border-radius: 10px;
-  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
-}
-
-.modal_content p {
-  margin-bottom: 10px;
-}
-
-.modal_content button {
-  background-color: #007bff;
-  color: white;
-  border: none;
-  padding: 10px 20px;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-.modal_content button:hover {
-  background-color: #adbdcf;
-}
-
-.modal_content p {
-  font-size: 20px;
-  margin-bottom: 20px;
-}
-
-.modal_content button {
-  font-size: 16px;
-}
-
 .work_container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    margin: 0 20%;
-  }
-  
-  .work_card {
-    width: 270px;
-    height: 400px;
-    margin: 20px;
-    text-align: center;
-    border-radius: 10px;
-    border: 1px solid rgba(0,0,0,0.2);
-    background-image: linear-gradient(190deg, #bebfe6, #788da2, #76819a, #808087fa, #b5c8d8fa);
-    box-shadow: 0 6px 8px rgba(214, 195, 159, 0.616);
-    transition: 0.3s ease-in;
-  }
-  
-  .work_card:hover{
-    transform: scale(1.02);
-  }
-  
-  .work_img {
-    width: 90%;
-    height: 200px;
-    object-fit: cover;
-    margin-top: 10px;
-    border-radius: 10px;
-    border: 1px solid rgba(39, 176, 255, 0.2);
-  }
-  .work_img_pic{
-    margin: auto;
-  }
-  
-  .card-body {
-    padding: 20px;
-    text-align: center;
-    width: 100%;
-  }
-  
-  .work_title {
-    font-weight: bold;
-    margin-bottom: 10px;
-    color: white;
-  }
-  
-  .card-text {
-    font-size: 16px;
-    margin-bottom: 10px;
-    color: white;
-  }
-  
-  .work_title_link{
-    font-size: 16px;
-    margin-left: 0px;
-    height: 600;
-    color: #f0eadf;;
-  }
-  
-  
-  
-  @media screen and (max-width: 992px) {
-    .work_container {
-      gap: 1.25rem;
-    }
-  
-    .work_card {
-      padding: 1rem;
-    }
-  
-    .work_img {
-      margin-bottom: 0.75rem;
-    }
-  
-    .work_title {
-      margin-bottom: 0.25rem;
-    }
-  }
-  
-  
-  @media screen and (max-width: 768px) {
-    .work_container {
-      grid-template-columns: max-content;
-    }
-  }
-  
-  @media screen and (max-width: 576px) {
-    .work_container {
-      grid-template-columns: 1fr;
-    }
-  
-    .work_img {
-      width: 100%;
-    }
-  }
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: 0 20%;
+}
 
-  @media screen and (max-width: 390px) {
-    .work_item {
-      font-size: var(--small-font-size);
-    }
-  
-    .work_filters {
-      column-gap: 0.25rem;
-    }
-    
-    .work_card {
-      width: 270px;
-      height: 400px;
-      margin: -5px;
-      text-align: center;
-      border-radius: 10px;
-      border: 2px solid rgba(0,0,0,0.2);
-      background-image: linear-gradient(190deg, #bebfe6, #adc2d8, #a7b0c4, #ccb6a2, #db9d6b);
-      box-shadow: 0 6px 8px rgba(214, 195, 159, 0.616);
-      transition: 0.3s ease-in;
-      padding: 10%;
-      margin-top: 20px;
-    }
-  }
+.work_card {
+  width: 270px;
+  height: 400px;
+  margin: 20px;
+  text-align: center;
+  border-radius: 10px;
+  border: 1px solid rgba(0,0,0,0.2);
+  background-image: linear-gradient(190deg, #bebfe6, #788da2, #76819a, #808087fa, #b5c8d8fa);
+  box-shadow: 0 6px 8px rgba(214, 195, 159, 0.616);
+  transition: 0.3s ease-in;
+}
 
-  @media screen and (max-width: 350px) {
-    .work_item {
-      font-size: var(--small-font-size);
-    }
-  
-    .work_filters {
-      column-gap: 0.25rem;
-    }
-  }
+.work_card:hover{
+  transform: scale(1.02);
+}
+
+.work_img {
+  width: 90%;
+  height: 200px;
+  object-fit: cover;
+  margin-top: 10px;
+  border-radius: 10px;
+  border: 1px solid rgba(39, 176, 255, 0.2);
+}
+.work_img_pic{
+  margin: auto;
+}
+
+.card-body {
+  padding: 20px;
+  text-align: center;
+  width: 100%;
+}
+
+.work_title {
+  font-weight: bold;
+  margin-bottom: 10px;
+  color: white;
+}
+
+.card-text {
+  font-size: 16px;
+  margin-bottom: 10px;
+  color: white;
+}
+.work_container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: 0 20%;
+}
+
+.work_card {
+  width: 270px;
+  height: 400px;
+  margin: 20px;
+  text-align: center;
+  border-radius: 10px;
+  border: 1px solid rgba(0,0,0,0.2);
+  background-image: linear-gradient(190deg, #bebfe6, #8dabca, #7481a0, #72728afa, #b99edcfa);
+  box-shadow: 0 6px 8px rgba(37, 7, 57, 0.616);
+  transition: 0.3s ease-in;
+}
+
+.work_card:hover{
+  transform: scale(1.02);
+}
+
+.work_img {
+  width: 90%;
+  height: 200px;
+  object-fit: cover;
+  margin-top: 10px;
+  border-radius: 10px;
+  border: 1px solid rgba(39, 176, 255, 0.2);
+}
+.work_img_pic{
+  margin: auto;
+}
+
+.card-body {
+  padding: 20px;
+  text-align: center;
+  width: 100%;
+}
+
+.work_title {
+  font-weight: bold;
+  margin-bottom: 10px;
+  color: white;
+}
+
+.card-text {
+  font-size: 16px;
+  margin-bottom: 10px;
+  color: white;
+}
